[gd_scene format=3 uid="uid://bejp5vivqr43f"]

[ext_resource type="Theme" uid="uid://3q7s11gs73j1" path="res://resources/themes/nox.tres" id="1_0g7jh"]
[ext_resource type="Script" uid="uid://d11qnwg4a3kmy" path="res://interface/screens/voice_chat_screen.gd" id="2_xxmmj"]
[ext_resource type="Texture2D" uid="uid://ck1vgf7mxgkdr" path="res://icons/person.png" id="3_7kqkq"]
[ext_resource type="Texture2D" uid="uid://cqvkn7ao3bg82" path="res://icons/call.png" id="4_rbrwj"]
[ext_resource type="Texture2D" uid="uid://b3q1vxouvgx7o" path="res://icons/callEnd.png" id="5_xxmmj"]

[node name="VoiceChatScreen" type="Control" unique_id=579116319]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_0g7jh")
script = ExtResource("2_xxmmj")

[node name="UserTiles" type="HFlowContainer" parent="." unique_id=581171952]
modulate = Color(1, 1, 1, 0.2509804)
layout_mode = 1
anchors_preset = -1
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.85, 0.85)
pivot_offset_ratio = Vector2(0.5, 0.5)
alignment = 1

[node name="PanelContainer" type="PanelContainer" parent="UserTiles" unique_id=111569172]
custom_minimum_size = Vector2(200, 200)
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="UserTiles/PanelContainer" unique_id=1883156431]
layout_mode = 2
texture = ExtResource("3_7kqkq")
expand_mode = 1
stretch_mode = 6

[node name="PanelContainer2" type="PanelContainer" parent="UserTiles" unique_id=7240295]
custom_minimum_size = Vector2(200, 200)
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="UserTiles/PanelContainer2" unique_id=873496474]
layout_mode = 2
texture = ExtResource("3_7kqkq")
expand_mode = 1
stretch_mode = 6

[node name="PanelContainer3" type="PanelContainer" parent="UserTiles" unique_id=2082450757]
custom_minimum_size = Vector2(200, 200)
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="UserTiles/PanelContainer3" unique_id=352023009]
layout_mode = 2
texture = ExtResource("3_7kqkq")
expand_mode = 1
stretch_mode = 6

[node name="PanelContainer4" type="PanelContainer" parent="UserTiles" unique_id=1686423527]
custom_minimum_size = Vector2(200, 200)
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="UserTiles/PanelContainer4" unique_id=2121147633]
layout_mode = 2
texture = ExtResource("3_7kqkq")
expand_mode = 1
stretch_mode = 6

[node name="PanelContainer5" type="PanelContainer" parent="UserTiles" unique_id=347877771]
custom_minimum_size = Vector2(200, 200)
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="UserTiles/PanelContainer5" unique_id=503602328]
layout_mode = 2
texture = ExtResource("3_7kqkq")
expand_mode = 1
stretch_mode = 6

[node name="PanelContainer6" type="PanelContainer" parent="UserTiles" unique_id=511310680]
custom_minimum_size = Vector2(200, 200)
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="UserTiles/PanelContainer6" unique_id=1622169397]
layout_mode = 2
texture = ExtResource("3_7kqkq")
expand_mode = 1
stretch_mode = 6

[node name="PanelContainer7" type="PanelContainer" parent="UserTiles" unique_id=1581491242]
custom_minimum_size = Vector2(200, 200)
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="UserTiles/PanelContainer7" unique_id=1690769014]
layout_mode = 2
texture = ExtResource("3_7kqkq")
expand_mode = 1
stretch_mode = 6

[node name="PanelContainer8" type="PanelContainer" parent="UserTiles" unique_id=1266310783]
custom_minimum_size = Vector2(200, 200)
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="UserTiles/PanelContainer8" unique_id=344930404]
layout_mode = 2
texture = ExtResource("3_7kqkq")
expand_mode = 1
stretch_mode = 6

[node name="PanelContainer9" type="PanelContainer" parent="UserTiles" unique_id=696563916]
custom_minimum_size = Vector2(200, 200)
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="UserTiles/PanelContainer9" unique_id=1677775429]
layout_mode = 2
texture = ExtResource("3_7kqkq")
expand_mode = 1
stretch_mode = 6

[node name="PanelContainer10" type="PanelContainer" parent="UserTiles" unique_id=616103853]
custom_minimum_size = Vector2(200, 200)
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="UserTiles/PanelContainer10" unique_id=1798732592]
layout_mode = 2
texture = ExtResource("3_7kqkq")
expand_mode = 1
stretch_mode = 6

[node name="PanelContainer11" type="PanelContainer" parent="UserTiles" unique_id=294446399]
custom_minimum_size = Vector2(200, 200)
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="UserTiles/PanelContainer11" unique_id=1060358110]
layout_mode = 2
texture = ExtResource("3_7kqkq")
expand_mode = 1
stretch_mode = 6

[node name="Notice" type="Label" parent="." unique_id=1399972638]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -362.5
offset_top = -40.0
offset_right = 362.5
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset_ratio = Vector2(0.5, 0.5)
theme_override_font_sizes/font_size = 64
text = "You are not connected."

[node name="HBoxContainer" type="HBoxContainer" parent="." unique_id=1567533992]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.935
anchor_right = 0.5
anchor_bottom = 0.95
grow_horizontal = 2
grow_vertical = 0

[node name="OutOfCallControls" type="HBoxContainer" parent="HBoxContainer" unique_id=1310671910]
unique_name_in_owner = true
layout_mode = 2

[node name="JoinCallButton" type="Button" parent="HBoxContainer/OutOfCallControls" unique_id=630491178]
custom_minimum_size = Vector2(175, 0)
layout_mode = 2
theme_type_variation = &"Button_Important"
theme_override_font_sizes/font_size = 22
text = "Join Call"
icon = ExtResource("4_rbrwj")
expand_icon = true

[node name="InCallControls" type="HBoxContainer" parent="HBoxContainer" unique_id=345056581]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="EndCallButton" type="Button" parent="HBoxContainer/InCallControls" unique_id=1913842695]
custom_minimum_size = Vector2(175, 0)
layout_mode = 2
theme_type_variation = &"Button_Red"
theme_override_font_sizes/font_size = 22
text = "Leave Call"
icon = ExtResource("5_xxmmj")
expand_icon = true

[connection signal="pressed" from="HBoxContainer/OutOfCallControls/JoinCallButton" to="." method="_on_join_call_button_pressed"]
[connection signal="pressed" from="HBoxContainer/InCallControls/EndCallButton" to="." method="_on_end_call_button_pressed"]
